# multi-model-agentic-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  run_app.bat  run_cli.bat  run_tests.bat  verify_setup.py
.ralph-state/: state.json
.windsurf/plans/: 2026-01-23-multimodal-agentic-rag-plan.md
api/: server.py
app/: main.py
app/components/: chunk_viewer.py  graph_viewer.py  sidebar.py
app/pages/: 1_💬_Chat.py  1_📄_Document_Upload.py  2_🔍_Query_Interface.py  2_🗄️_Data_Store.py  3_📊_Data_Store_Viewer.py  3_🕸️_Knowledge_Graph.py  4_🕸️_Document_Graph.py  4_🛠️_Admin.py  5_⚙️_Settings.py
app/utils/: session.py
data/: sample_questions.json
docs/: agent.md  deployment.md  edge_cases.md  progress.md  quickstart.md  specs.md
docs/plans/: 2026-03-22-provider-overhaul-design.md  2026-03-22-provider-overhaul-implementation.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/admin/: page.tsx
frontend/app/(app)/chat/: page.tsx
frontend/app/(app)/data-store/: page.tsx
frontend/app/(app)/knowledge-graph/: page.tsx
frontend/components/chat/: chat-input.tsx  message-bubble.tsx  stats-bar.tsx  upload-status.tsx
frontend/components/data-store/: chunk-table.tsx  saved-answers.tsx
frontend/components/graph/: force-graph.tsx  node-inspector.tsx
frontend/components/layout/: sidebar.tsx
frontend/hooks/: use-chat.ts  use-ingestion.ts
frontend/lib/: api.ts
src/: batch_runner.py  cli.py
src/rag/: __init__.py  config.py  pipeline.py
src/rag/agent/: __init__.py  decomposer.py  executor.py  hyde_generator.py  intent_classifier.py  memory.py  planner.py  query_expander.py  query_rewriter.py  summarizer.py  tools.py
src/rag/chunking/: __init__.py  chunker.py  metadata.py
src/rag/eval/: __init__.py  audit_summary.py  harness.py
src/rag/generation/: __init__.py  llm_client.py  prompts.py  refiner.py
src/rag/indexing/: __init__.py  bm25_index.py  hybrid_retriever.py  reranker.py  vector_store.py
src/rag/ingestion/: __init__.py  loader.py  parser.py
src/rag/utils/: audit_logger.py  cache_manager.py  database.py  date_extractor.py  feedback_manager.py  index_registry.py  job_store.py
src/rag/validation/: __init__.py  validator.py
src/rag/visualization/: charts.py  graph_builder.py
tests/: conftest.py  test_agent_summary.py  test_audit_summary.py  test_cache_manager.py  test_config.py  test_date_extractor.py  test_decomposer.py  test_e2e.py  test_eval_harness.py  test_feedback.py  test_full_architecture.py  test_graph_state_bridge.py  test_hierarchical.py  test_hyde_refiner.py  test_index_registry.py  test_job_store.py  test_kg_interaction_flow.py  test_kg_performance_guardrails.py  test_memory_rewriter.py  test_ocr_capability.py  test_parallel_ingestion.py  test_pipeline_fast_path.py  test_planner_fast_mode.py  test_query_expander.py  test_query_rewriter_light.py  test_real_logic.py  test_reranker.py  test_settings_tuning.py  test_startup_speed.py  test_validator_logic.py
tests/test_agent/: test_intent.py
tests/test_chunking/: test_chunker.py  test_metadata.py
tests/test_generation/: test_llm_client.py  test_llm_fallback.py
tests/test_indexing/: test_bm25.py  test_hybrid.py  test_nvidia_embeddings.py  test_vector.py
tests/test_ingestion/: test_loader.py  test_parser.py  test_parser_llamaparse.py
tests/test_validation/: test_validator.py
tests/test_visualization/: test_charts.py  test_graph_builder.py
