[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag-agentic"
version = "0.2.0"
description = "Multimodal agentic RAG with FastAPI backend and Next.js frontend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project Team"}]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "llama-parse>=0.6.0",
    "whoosh>=2.7.4",
    "chromadb>=0.4.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.0.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "plotly>=5.18.0",
    "pyvis>=0.3.2",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
streamlit-legacy = [
    "streamlit>=1.30.0",
    "streamlit-option-menu>=0.3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
